--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,6 @@
 
 
 <header>
-        <!--Abdul Muqeet Ahmed, Student number: 000916755-->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +34,7 @@
 
 
             <footer>
-                <p>&copy; Abdul Muqeet Ahmed 2024, Mohawk College 2024</p>
+                <p>&copy; Abdul Muqeet Ahmed 2025</p>
             </footer>
 
 
